package yowyob.comops.api.hrm.domain.model;

public enum ContractStatus {
    DRAFT,
    ACTIVE,
    EXPIRED,
    TERMINATED
}
