package yowyob.comops.api.hrm.domain.model;

public enum ContractType {
    CDI,
    CDD,
    STAGE,
    INTERIM,
    CONSULTANT
}
