package yowyob.comops.api.hrm.domain.model;

public enum EmployeeStatus {
    ACTIVE,
    ON_LEAVE,
    SUSPENDED,
    TERMINATED
}
