package yowyob.comops.api.hrm.domain.model;

public enum LoanStatus {
    PENDING,
    APPROVED,
    ACTIVE,
    FULLY_REPAID,
    REJECTED,
    CANCELLED
}
